Name:                 henet
Version:              1.3.8.0
Synopsis:             Bindings and high level interface for to ENet v1.3.8
Description:          ENet is a networking library for games using UDP.
License-file:         enet/LICENSE
License:              MIT
Author:               John Ericson
Maintainer:           Ericson2314@Yahoo.com
Build-Type:           Simple
Cabal-Version:        >=1.10
Category:             FFI

Extra-source-files:   enet/include/enet/*.h

Source-repository head
  type:               git
  location:           git://github.com/Ericson2314/henet.git

Test-suite henet-test
  default-language:   Haskell98
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base            >= 3
    ,                 henet

Library
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell98
  default-extensions: ForeignFunctionInterface

  build-tools:        hsc2hs


  build-depends:      base            >= 3
    ,                 bitset          >= 1.4.0
    ,                 network         >= 2.4.1
    ,                 bytestring      >= 0.10
    ,                 primitive       >= 0.2.1
    ,                 typesafe-endian == 0.1.*

  exposed-modules:    Network.ENet
    ,                 Network.ENet.Host
    ,                 Network.ENet.Peer
    ,                 Network.ENet.Packet
    ,                 Network.ENet.Bindings

  other-modules:      Network.ENet.Internal
    ,                 Network.ENet.Bindings.System
    ,                 Network.ENet.Bindings.Callbacks
--    ,                 Network.ENet.Bindings.Protocol
    ,                 Network.ENet.Bindings.List

  c-sources:          enet/callbacks.c
    ,                 enet/compress.c
    ,                 enet/host.c
    ,                 enet/list.c
    ,                 enet/packet.c
    ,                 enet/peer.c
    ,                 enet/protocol.c


  include-dirs:       enet
    ,                 enet/include

  cc-options:         -g
  ld-options:         -g
  if os(windows)
    cpp-options:        -DWINDOWS
    cc-options:         -D_WIN32 -D_DEBUG
    c-sources:          enet/win32.c
  else
    cc-options:         -D_GNU_SOURCE -Wno-deprecated-declarations -DHAS_SOCKLEN_T=1
    c-sources:          enet/unix.c
